# MessageBox

./: CMakeLists.txt  CMakePresets.json  CustomMessageBox.h  LICENSE  README.md  plugin.cpp  skyrimse.ppj
Fonts/: Attribution.txt
Scripts/: MessageBoxDemo.pex  SkyMessage.pex
Scripts/Bindings/: MessageBoxDemo.txt
Scripts/Source/: MessageBoxDemo.psc  SkyMessage.psc
cmake/: Config.cmake.in
images/: Papyrus MessageBox Logo.xcf
include/SkyrimScripting/: MessageBox.h
